Update preset description in introduction

--- a/foam/introduction.mdx
+++ b/foam/introduction.mdx
@@ -10,7 +10,7 @@ This grounding in actual acoustics produces sounds that are inherently organic a
 ## Key Features
 
 - **Physics-driven synthesis** — every sound is generated from physical models, not samples
-- **99 factory presets** across 8 categories with tier-based organization. These are statistically generated starting points to explore from and intentionally NOT answers  :)
+- **99 factory presets** across 8 categories with tier-based organization. These are statistically generated starting points to explore from and intentionally NOT answers - we will likely have no presets for the release version  :)
 - **MIDI playable** — note pitch controls bubble frequency, velocity controls intensity, MPE mapping
 - **75+ musical scales** with gravity-based pitch quantization
 - **8-band parallel compression** for density and sustain control
@@ -31,7 +31,6 @@ FOAM is available as:
 
 - macOS 10.15 (Catalina) or later (request Windows if you need it and we'll work on it!)
 - Any major DAW: Ableton Live, Logic Pro, FL Studio, Reaper, Pro Tools, Bitwig, Cubase
-- NOTE: For the moment you need to use a buffer/block size of \<64 to hear the system accurately. It sounds best in the standalone at 16 as of Feb 17, 2026. We are working on this issue. 
 
 ## Credits
 
