Update Foam introduction with MIDI learn feature

--- a/foam/introduction.mdx
+++ b/foam/introduction.mdx
@@ -10,14 +10,14 @@ This grounding in actual acoustics produces sounds that are inherently organic a
 ## Key Features
 
 - **Physics-driven synthesis** — every sound is generated from physical models, not samples
-- **99 factory presets** across 8 categories with tier-based organization. These are statistically generated starting points to explore from and intentionally NOT answers - we will likely have no presets for the release version  :)
-- **MIDI playable** — note pitch controls bubble frequency, velocity controls intensity, MPE mapping
+- **MIDI playable** — note pitch controls bubble frequency, velocity controls intensity, MPE mapping, midi learn
 - **75+ musical scales** with gravity-based pitch quantization
 - **8-band parallel compression** for density and sustain control
 - **Intelligent voice scaling** — multi-factor gain management for clean mixes at any density
 - **OSC output** — stream bubble events to external apps for visualization or processing
 - **CPU Cut mode** — optimized playback for low-power machines
 - **GPU Cut mode** - stops the visualization for further efficiency in rendering or heavy workflows
+- **User Preset System** - No factory cheats, you gotta go explore! 
 
 ## Formats
 
